Adjust contrast between text and background in search field (bug 1046577)

--- a/src/media/css/site.styl
+++ b/src/media/css/site.styl
@@ -115,7 +115,7 @@ section > form, section > ol, section > div {
     background-size: 34px;
     border: 1px solid #cbcbcb;
     border-radius: 5px;
-    color: #cbcbcb;
+    color: #9e9e9e;
     font: 400 30px/34px $open-stack;
     height: 60px;
     margin: 30px 0;
@@ -125,7 +125,7 @@ section > form, section > ol, section > div {
     z-index: 2;
 
     &::-moz-placeholder {
-        color: darken($cement-gray, 5%);
+        color: #cbcbcb;
     }
     &:focus {
         border-color: #72cfff;
